Display timestamps for new messages, and fix the spacing for the author text

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9551,8 +9551,7 @@ dd.project-people {
 
 .message-author {
   display: inline-block;
-  min-width: 5em;
-  margin-right: 1em; }
+  margin: 0 1ex; }
 
 .message {
   background-color: #fff;
@@ -9565,7 +9564,8 @@ dd.project-people {
 
 .message-date {
   font-size: 10px;
-  color: #888888; }
+  color: #888888;
+  margin-right: 1ex; }
 
 .message-content {
   display: inline-block; }
